<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Student</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_txtusername">Username</string>
    <string name="login_txtpassword">Password</string>
    <string name="login_btnlogin">Login</string>
    <string name="login_btncancel">Cancel</string>
    <string name="login_txtforgetpassword">Forget password</string>
    <string name="title_activity_student_check">Student-Check</string>
    <string name="check_txtidCourse">Course</string>
    <string name="check_txtcount">Count</string>
    <string name="check_btncheck">Check</string>
    <string name="check_btncancel">Cancel</string>
    <string name="title_activity_passcode">Student-Passcode</string>
    <string name="passcode_txtpasscode">Enter Passcode</string>
    <string name="passcode_btnenterpc">Enter</string>
    <string name="passcode_btncancelpc">Cancel</string>
    <string name="title_activity_student_menu">Student-Menu</string>
    <string name="menu_btncheck">Check</string>
    <string name="menu_btnquestion">Question</string>
    <string name="menu_btnlogout">Logout</string>
    <string name="menu_btnviewcount">View Count</string>
    <string name="title_activity_student_question">Student-Question</string>
    <string name="question_txtquestion">1gb is equal to how much kb</string>
    <string name="question_txtans1">1024</string>
    <string name="question_txtans2">100,000</string>
    <string name="question_txtans3">1,000,000</string>
    <string name="question_txtans4">10,000,000</string>
    <string name="question_txttimecount">3  minute</string>
    <string name="question_btnsubmit">Submit</string>
    <string name="title_activity_student_passcode">Student-Passcode</string>
    <string name="title_activity_studentspl">Spl</string>
    <string name="title_activity_student_viewattend">StudentViewattend</string>
    <string name="spinnerTextHint">Please select Subject</string>

</resources>
