<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rdiog1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".StudentMenu" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent" >

        <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="422dp"
            android:orientation="vertical"
            tools:ignore="ScrollViewSize" >

            <Button
                android:id="@+id/btnsubmitcheck"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="22dp"
                android:background="@drawable/custom_btn_shakespeare"
                android:text="@string/menu_btncheck"
                android:textColor="@color/Black" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/viewcount"
                android:layout_marginTop="40dp"
                android:background="@drawable/custom_btn_sandrift"
                android:text="@string/menu_btnquestion"
                android:textColor="@color/Black" />

            <Button
                android:id="@+id/button3"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/button2"
                android:layout_marginTop="36dp"
                android:background="@drawable/custom_btn_orange"
                android:text="@string/menu_btnlogout"
                android:textColor="@color/Black" />

            <Button
                android:id="@+id/viewcount"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/btnsubmitcheck"
                android:layout_marginTop="36dp"
                android:background="@drawable/custom_btn_lemon_chiffon"
                android:text="@string/menu_btnviewcount"
                android:textColor="@color/Black" />

        </RelativeLayout>
    </ScrollView>

</LinearLayout>
